# international

./: .dockerignore  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yml  international_db.drawio  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt
authentication/: api.py  models.py
authentication/tests/: authenticate_user_tests.py  create_user_tests.py
international/: api.py  settings.py  urls.py  wsgi.py
international-be/international/: api.py  asgi.py  schemas.py  settings.py  urls.py  views.py
international-be/managerapp/: views.py
international-be/pairings/: apps.py  schemas.py
international-be/players/: api.py  models.py  schemas.py
international-be/rounds/: api.py  schemas.py
international-be/standings/: admin.py
international-be/tournaments/: exceptions.py
international-be/users/: api.py
managerapp/: urls.py
matches/: models.py
nginx/: nginx.conf
pairings/: admin.py  models.py  schemas.py
pairings/migrations/: 0002_alter_playerentry_wins.py
players/: api.py  models.py  schemas.py  views.py
players/migrations/: 0001_initial.py  0002_alter_player_name.py
players/tests/: create_player_tests.py  create_tournament_tests.py
rounds/: admin.py  api.py  functions.py  models.py  schemas.py
rounds/migrations/: 0002_alter_round_options_round_state.py
rounds/modules/: first_round.py  generate_round.py  save_round.py
rounds/tests/: create_next_round_tests.py  (+5 more)
standings/: models.py  schemas.py
tournaments/: api.py  models.py  schemas.py  views.py
users/: api.py  authentication.py
(+41 files in other folders)
